--- a/public/about/index.html
+++ b/public/about/index.html
@@ -382,7 +382,7 @@ My Background I work for NetApp as a Solution Engineer (SE). I worked with a var
             return;
         }
         var d = document, s = d.createElement('script'); s.async = true;
-        s.src = '//' + "johnhenriksson" + '.disqus.com/embed.js';
+        s.src = '//' + "johnhenriksson-se" + '.disqus.com/embed.js';
         s.setAttribute('data-timestamp', +new Date());
         (d.head || d.body).appendChild(s);
     })();
