--- a/public/index.html
+++ b/public/index.html
@@ -285,11 +285,12 @@
       </header>
 
       <section class="gblog-markdown">
-        <p>YT Shorts is an annoying, addictive video service that my kids love. I&rsquo;ve been looking for a way to disable just the shorts feature as they are allowed to view &ldquo;classic videos&rdquo;. In my search I stumbled upon this guide, which I&rsquo;ve extended on <a
+        <p>YouTube Shorts is an annoying, addictive video service that my kids love. I&rsquo;ve been looking for a way to disable just the shorts feature as they are allowed to view &ldquo;classic videos&rdquo;. In my search I stumbled upon this guide, which I&rsquo;ve extended on <a
   class="gblog-markdown__link"
+  target="_blank"
   href="https://dealancer.medium.com/blocking-youyube-shorts-with-nginx-and-nextdns-c2ccb0ff5452"
 >https://dealancer.medium.com/blocking-youyube-shorts-with-nginx-and-nextdns-c2ccb0ff5452</a> </p>
-<p>What I learned is that the requests to YouTube have the parameter &amp;ctier=SH so you need to intersect the traffic to YouTube and block these specific request, while allowing the rest.</p>
+<p>What I learned is that the requests to YouTube have the parameter <strong>&amp;ctier=SH</strong> so you need to intersect the traffic to YouTube and block these specific request, while allowing the rest.</p>
       </section>
       <div class="gblog-post__readmore">
         
@@ -609,6 +610,7 @@
 /></p>
 <p>I&rsquo;m on my way to deploying Kubernetes the hard way, following <a
   class="gblog-markdown__link"
+  target="_blank"
   href="https://github.com/kelseyhightower/kubernetes-the-hard-way"
 >Kelsey Hightowers GitHub tutorial</a>. The guide uses GCP for compute resources, but I want to utilize my home lab based on VMware, and I want to do it in a cloud fashion, with Infrastructure as Code. For this, I leverage tools like Packer and Terraform. In my previous post, I showed you how to build a VM template on vSphere with Packer. In this post, I&rsquo;ll show you how to provision VMs from that template with Terraform.</p>
       </section>
