--- a/public/about/index.html
+++ b/public/about/index.html
@@ -172,7 +172,7 @@ My Background I work for NetApp as a Solution Engineer (SE). I worked with a var
 
     
 
-      <script async src="https://www.googletagmanager.com/gtag/js?id=G-RHTJKJXTF6"></script>
+      <script async src="https://www.googletagmanager.com/gtag/js?id=G-577F6CRZMN"></script>
       <script>
         var doNotTrack = false;
         if ( false ) {
@@ -183,7 +183,7 @@ My Background I work for NetApp as a Solution Engineer (SE). I worked with a var
           window.dataLayer = window.dataLayer || [];
           function gtag(){dataLayer.push(arguments);}
           gtag('js', new Date());
-          gtag('config', 'G-RHTJKJXTF6');
+          gtag('config', 'G-577F6CRZMN');
         }
       </script>
   </head>
